:poop: add some functions

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 </div>
                 <a href="sign-up" class="bg-yellow-400 text-gray-800 py-2 px-4 rounded hover:bg-yellow-500">Sign Up</a>
                 <div class="relative">
+                    <!--queria ponerle una campanita de notis pero no pude-->
                     <button class="bg-gray-700 text-white p-2 rounded-full hover:bg-gray-600">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" >
                         </svg>
@@ -34,7 +35,7 @@
     </header>
 
     <main>
-        <!-- Welcome Section -->
+        <!-- Welcomee -->
         <section id="home" class="py-16 text-center">
             <h2 class="text-4xl font-semibold mb-4">Bienvenido a Exopets</h2>
             <img src="https://images.unsplash.com/photo-1672397892693-c08f955f7b66?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Exopets Bienvenida" class="mx-auto mb-6 h-60 rounded-lg">
@@ -44,7 +45,7 @@
             <div class="container mx-auto">
                 <h2 class="text-3xl font-semibold mb-8 text-center">Conecta</h2>
                 <div class="space-y-6">
-                    <!-- Example -->
+                    <!-- Example of foro-->
                     <div class="bg-gray-100 p-6 rounded-lg shadow-lg">
                         <p><strong>Harry Potter:</strong>¿Cómo alimentar una tarántula?<em>Brachypelma</em>?<p>
                         <button class="mt-4 bg-yellow-400 hover:bg-yellow-500 text-white py-2 px-4 rounded">Responder</button>
@@ -61,7 +62,7 @@
             <div class="container mx-auto">
                 <h2 class="text-3xl font-semibold mb-8 text-center">Marketplace</h2>
                 <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
-                    <!-- Product Card Example -->
+                    <!--Example of products -->
                     <div class="bg-white p-6 rounded-lg shadow-lg text-center">
                         <img src="https://media.istockphoto.com/id/985663144/es/foto/primer-plano-de-ara%C3%B1a-tar%C3%A1ntula-ara%C3%B1a.jpg?s=612x612&w=0&k=20&c=hbBnvsTs_NUpURc1V0HNh5M80oiXbml2K6Od6EwmNNk=" alt="Brachypelma" class="mx-auto mb-4 rounded-lg">
                         <p class="text-xl font-semibold">Tarántula Brachypelma</p>
