--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <input type="text" id="search-input" class="border border-gray-300 rounded-l-lg p-2" placeholder="Buscar">
                     <button id="search-btn" class="bg-gray-800 text-white rounded-r-lg px-4 bg-yellow-400">Buscar</button>
                 </div>
-                <a href="sign-up" class="bg-yellow-400 text-gray-800 py-2 px-4 rounded hover:bg-yellow-500">Sign Up</a>
+                <a href="signUp.html" class="bg-yellow-400 text-gray-800 py-2 px-4 rounded hover:bg-yellow-500">Sign Up</a>
                 <div class="relative">
                     <!--queria ponerle una campanita de notis pero no pude-->
                     <button class="bg-gray-700 text-white p-2 rounded-full hover:bg-gray-600">
