:lipstick: Update marketplace

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
                 </div>
                 <a href="signUp.html" class="bg-yellow-400 text-gray-800 py-2 px-4 rounded hover:bg-yellow-500">Sign Up</a>
                 <div class="relative">
-                    <!--queria ponerle una campanita de notis pero no pude-->
+                    <!--notis-->
                     <button class="bg-gray-700 text-white p-2 rounded-full hover:bg-gray-600">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" >
+                        <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="M160-200v-80h80v-280q0-83 50-147.5T420-792v-28q0-25 17.5-42.5T480-880q25 0 42.5 17.5T540-820v28q80 20 130 84.5T720-560v280h80v80H160Zm320-300Zm0 420q-33 0-56.5-23.5T400-160h160q0 33-23.5 56.5T480-80ZM320-280h320v-280q0-66-47-113t-113-47q-66 0-113 47t-47 113v280Z"/></svg>
                         </svg>
                     </button>
                 </div>
-                <a href="marketplace" class="hover:text-yellow-400">Marketplace</a>
+                <a href="marketplace.html" class="hover:text-yellow-400">Marketplace</a>
             </div>
         </div>
     </header>
@@ -47,7 +47,7 @@
                 <div class="space-y-6">
                     <!-- Example of foro-->
                     <div class="bg-gray-100 p-6 rounded-lg shadow-lg">
-                        <p><strong>Harry Potter:</strong>¿Cómo alimentar una tarántula?<em>Brachypelma</em>?<p>
+                        <p><strong>Harry Potter:</strong>¿Cómo alimentar una tarántula <em>Brachypelma</em>?<p>
                         <button class="mt-4 bg-yellow-400 hover:bg-yellow-500 text-white py-2 px-4 rounded">Responder</button>
                     </div>
                     <div class="bg-gray-100 p-6 rounded-lg shadow-lg">
@@ -60,7 +60,7 @@
 
         <section id="marketplace" class="py-16 bg-gray-100">
             <div class="container mx-auto">
-                <h2 class="text-3xl font-semibold mb-8 text-center">Marketplace</h2>
+                <h2 class="text-3xl font-semibold mb-8 text-center">Recomendaciones</h2>
                 <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
                     <!--Example of products -->
                     <div class="bg-white p-6 rounded-lg shadow-lg text-center">
@@ -72,9 +72,10 @@
                     <div class="bg-white p-6 rounded-lg shadow-lg text-center">
                         <img src="https://media.istockphoto.com/id/174937723/es/foto/zophobas-larvae-superworm.jpg?s=1024x1024&w=is&k=20&c=eu1TaaKI3oOBhdXJepcmEWzzhnJ3KNZuqn8j5Lr6gb4=" class="mx-auto mb-4 rounded-lg">
                         <p class="text-xl font-semibold">Gusanos de la harina</p>
-                        <p class="text-gray-700 mb-4">Precio: $200</p>
+                        <p class="text-gray-700 mb-4">Precio: $10 por 50 unidades</p>
                         <button class="bg-gray-800 text-white py-2 px-4 rounded hover:bg-yellow-400">Comprar</button>
                     </div>
+                    
                     <div class="bg-white p-6 rounded-lg shadow-lg text-center">
                         <img src="https://images.unsplash.com/photo-1585095595274-aeffce35511a?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8N3x8cHl0aG9uJTIwYm9sYSUyMGJhbmFuYXxlbnwwfHwwfHx8MA%3D%3D" alt="Python bola banana" class="mx-auto mb-4 rounded-lg">
                         <p class="text-xl font-semibold">Python bola banana</p>
@@ -86,3 +87,4 @@
         </section>
     </main>
 </main>
+</body>
