--- a/signUp.html
+++ b/signUp.html
@@ -4,15 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <title>Document</title>
+    <title>Exopets - Login</title>
 </head>
 <body class="bg-gray-50">
-    <!-- Header -->
     <header class="bg-gray-800 text-white py-4">
         <div class="container mx-auto flex justify-between items-center">
-            <!-- Logo -->
             <div class="flex items-center">
-                <img src="img/image-removebg-preview (2).png"  alt="Exopets Logo" class="h-16 mr-4">
+                <img src="img/image-removebg-preview (2).png" alt="Exopets Logo" class="h-16 mr-4">
             </div>
 
             <div class="flex items-center space-x-4">
@@ -25,5 +23,43 @@
             </div>
         </div>
     </header>
+
+    <main class="container mx-auto py-10">
+        <h1 class="text-3xl font-bold text-center mb-8">¿Cómo quieres iniciar sesión?</h1>
+
+        <div class="flex justify-center space-x-8">
+            <button id="vendedorBtn" class="bg-yellow-400 text-gray-800 py-4 px-8 rounded-lg hover:bg-yellow-500 ">
+                Soy Vendedor
+            </button>
+            <button id="compradorBtn" class="bg-yellow-400 text-gray-800 py-4 px-8 rounded-lg hover:bg-yellow-500">
+                Soy Comprador/Entusiasta
+            </button>
+        </div>
+
+        <div id="form-container" class="mt-10 mx-auto w-full max-w-lg bg-white p-8 rounded-lg shadow-lg">
+            <form id="formmm">
+                <h2 id="formTitle" class="text-2xl font-semibold mb-6"></h2>
+                <div class="mb-4">
+                    <label for="name" class="block text-sm font-medium text-gray-700">Nombre</label>
+                    <input type="text" id="name" name="name" class="mt-1 block w-full border-gray-300 rounded-md">
+                </div>
+                <div class="mb-4">
+                    <label for="email" class="block text-sm font-medium text-gray-700">Email</label>
+                    <input type="email" id="email" name="email" class="mt-1 block w-full border-gray-300 rounded-md">
+                </div>
+                <div class="mb-4">
+                    <label for="password">Contraseña</label>
+                    <input type="password" id="password" name="password" class="mt-1 block w-full border-gray-300 rounded-md shadow-sm">
+                </div>
+
+                <div id="extraFields" class="mb-4"></div>
+
+                <!-- Botón de enviar -->
+                <button type="submit" class="w-full bg-yellow-400 text-gray-800 py-2 px-4 rounded hover:bg-yellow-500 focus:ring-2 focus:ring-yellow-500">Registrarse</button>
+            </form>
+        </div>
+    </main>
+
+    <script src="main.js"></script>
 </body>
 </html>
