--- a/marketplace.html
+++ b/marketplace.html
@@ -102,5 +102,16 @@
         </div>
     </section>
     
+    <footer class="bg-gray-800 text-white py-4">
+        <div class="container mx-auto text-center">
+            <p>&copy; 2024 Exopets. All rights reserved.</p>
+            <div class="flex justify-center space-x-4">
+                <a href="about.html" class="hover:text-yellow-400">About Us</a>
+                <a href="contact.html" class="hover:text-yellow-400">Contact</a>
+                <a href="privacy.html" class="hover:text-yellow-400">Privacy Policy</a>
+            </div>
+        </div>
+    </footer>
+    
 </body>
 </html>
