--- a/signUp.html
+++ b/signUp.html
@@ -19,7 +19,7 @@
                     <button id="search-btn" class="bg-gray-800 text-white rounded-r-lg px-4 bg-yellow-400">Buscar</button>
                 </div>
                 <a href="signUp.html" class="bg-yellow-400 text-gray-800 py-2 px-4 rounded hover:bg-yellow-500">Sign Up</a>
-                <a href="marketplace" class="hover:text-yellow-400">Marketplace</a>
+                <a href="marketplace.html" class="hover:text-yellow-400">Marketplace</a>
             </div>
         </div>
     </header>
