--- a/contact.html
+++ b/contact.html
@@ -1,49 +1,49 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <title>Contact Us</title>
+    <title>Contáctanos</title>
 </head>
 <body class="bg-gray-50">
     <header class="bg-gray-800 text-white py-4">
         <div class="container mx-auto">
-            <h1 class="text-3xl font-bold text-center">Contact Us</h1>
+            <h1 class="text-3xl font-bold text-center">Contáctanos</h1>
         </div>
     </header>
 
     <section class="py-16">
         <div class="container mx-auto text-center">
-            <h2 class="text-2xl font-semibold mb-4">We'd Love to Hear from You!</h2>
-            <p class="text-gray-700 mb-8">Please fill out the form below, and we will get back to you as soon as possible.</p>
+            <h2 class="text-2xl font-semibold mb-4">¡Nos encantaría saber de ti!</h2>
+            <p class="text-gray-700 mb-8">Por favor llena el siguiente formulario, y nos pondremos en contacto contigo lo antes posible.</p>
 
             <form action="#" method="POST" class="max-w-lg mx-auto bg-white p-8 rounded-lg shadow-md">
                 <div class="mb-4">
-                    <label for="name" class="block text-gray-700 mb-2">Name</label>
+                    <label for="name" class="block text-gray-700 mb-2">Nombre</label>
                     <input type="text" id="name" name="name" required class="border border-gray-300 p-2 w-full rounded-md">
                 </div>
                 <div class="mb-4">
-                    <label for="email" class="block text-gray-700 mb-2">Email</label>
+                    <label for="email" class="block text-gray-700 mb-2">Correo Electrónico</label>
                     <input type="email" id="email" name="email" required class="border border-gray-300 p-2 w-full rounded-md">
                 </div>
                 <div class="mb-4">
-                    <label for="subject" class="block text-gray-700 mb-2">Subject</label>
+                    <label for="subject" class="block text-gray-700 mb-2">Asunto</label>
                     <input type="text" id="subject" name="subject" required class="border border-gray-300 p-2 w-full rounded-md">
                 </div>
                 <div class="mb-4">
-                    <label for="message" class="block text-gray-700 mb-2">Message</label>
+                    <label for="message" class="block text-gray-700 mb-2">Mensaje</label>
                     <textarea id="message" name="message" rows="4" required class="border border-gray-300 p-2 w-full rounded-md"></textarea>
                 </div>
-                <button type="submit" class="bg-gray-800 text-white p-2 rounded-md hover:bg-gray-700">Send Message</button>
+                <button type="submit" class="bg-gray-800 text-white p-2 rounded-md hover:bg-gray-700">Enviar Mensaje</button>
             </form>
 
-            <h2 class="text-2xl font-semibold mt-12 mb-4">Other Contact Methods</h2>
-            <p class="text-gray-700">Email: <a href="mailto:info@exopets.com" class="text-yellow-400 underline">info@exopets.com</a></p>
-            <p class="text-gray-700">Phone: <a href="tel:+1234567890" class="text-yellow-400 underline">+1 (234) 567-890</a></p>
+            <h2 class="text-2xl font-semibold mt-12 mb-4">Otros Métodos de Contacto</h2>
+            <p class="text-gray-700">Correo: <a href="mailto:info@exopets.com" class="text-yellow-400 underline">info@exopets.com</a></p>
+            <p class="text-gray-700">Teléfono: <a href="tel:+1234567890" class="text-yellow-400 underline">+1 (234) 567-890</a></p>
 
             <div class="mt-8">
-                <h3 class="text-xl font-semibold mb-2">Follow Us</h3>
+                <h3 class="text-xl font-semibold mb-2">Síguenos</h3>
                 <div class="flex justify-center space-x-4">
                     <a href="#" class="text-yellow-400 hover:underline">Facebook</a>
                     <a href="#" class="text-yellow-400 hover:underline">Twitter</a>
@@ -55,7 +55,12 @@
 
     <footer class="bg-gray-800 text-white py-4">
         <div class="container mx-auto text-center">
-            <p>&copy; 2024 Exopets. Todos los derechos reservados.</p>
+            <p>&copy; 2024 Exopets. All rights reserved.</p>
+            <div class="flex justify-center space-x-4">
+                <a href="about.html" class="hover:text-yellow-400">About Us</a>
+                <a href="contact.html" class="hover:text-yellow-400">Contact</a>
+                <a href="privacy.html" class="hover:text-yellow-400">Privacy Policy</a>
+            </div>
         </div>
     </footer>
 </body>
