--- a/foro.html
+++ b/foro.html
@@ -21,10 +21,31 @@
                     <button id="search-btn" class="bg-gray-800 text-white rounded-r-lg px-4 bg-yellow-400">Buscar</button>
                 </div>
                 <a href="signUp.html" class="bg-yellow-400 text-gray-800 py-2 px-4 rounded hover:bg-yellow-500">Sign Up</a>
+                <!-- Notifications -->
                 <div class="relative">
-                    <button class="bg-gray-700 text-white p-2 rounded-full hover:bg-gray-600">
-                        <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="M160-200v-80h80v-280q0-83 50-147.5T420-792v-28q0-25 17.5-42.5T480-880q25 0 42.5 17.5T540-820v28q80 20 130 84.5T720-560v280h80v80H160Zm320-300Zm0 420q-33 0-56.5-23.5T400-160h160q0 33-23.5 56.5T480-80ZM320-280h320v-280q0-66-47-113t-113-47q-66 0-113 47t-47 113v280Z"/></svg>
+                    <button id="notification-btn" class="bg-gray-700 text-white p-2 rounded-full hover:bg-gray-600">
+                        <svg xmlns="https://cf-vectorizer-live.s3.amazonaws.com/uploads/2nM3pmfskgYQog1hNaBah0jEnwk/2nM3vWR3qwcRdlUxbvTHC7YJh8o.png" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed">
+                            <path d="M160-200v-80h80v-280q0-83 50-147.5T420-792v-28q0-25 17.5-42.5T480-880q25 0 42.5 17.5T540-820v28q80 20 130 84.5T720-560v280h80v80H160Zm320-300Zm0 420q-33 0-56.5-23.5T400-160h160q0 33-23.5 56.5T480-80ZM320-280h320v-280q0-66-47-113t-113-47q-66 0-113 47t-47 113v280Z"/>
+                        </svg>
                     </button>
+    
+                    <div id="notification-dropdown" style="display: none; position: absolute; right: 0; top: 50px; background-color: white; width: 300px; max-height: 400px; overflow-y: scroll; border: 1px solid #ccc; border-radius: 5px; box-shadow: 0 4px 8px rgba(0,0,0,0.1);">
+                        <div class="notification-item p-4 border-b border-gray-200">
+                            <strong>Nuevo mensaje</strong>: Has recibido un mensaje nuevo de Juan.
+                        </div>
+                        <div class="notification-item p-4 border-b border-gray-200">
+                            <strong>Compra exitosa</strong>: Tu compra de alimento para tarántulas fue completada.
+                        </div>
+                        <div class="notification-item p-4 border-b border-gray-200">
+                            <strong>Notificación general</strong>: Hay una nueva actualización en la sección de foros.
+                        </div>
+                        <div class="notification-item p-4 border-b border-gray-200">
+                            <strong>Nuevo mensaje</strong>: María te ha enviado un mensaje.
+                        </div>
+                        <div class="notification-item p-4">
+                            <strong>Compra exitosa</strong>: Se ha confirmado la compra de un terrario.
+                        </div>
+                    </div>
                 </div>
                 <a href="marketplace.html" class="hover:text-yellow-400">Marketplace</a>
             </div>
@@ -35,7 +56,6 @@
         <div class="container mx-auto">
             <h2 class="text-3xl font-semibold mb-8 text-center">Sube tu propio post</h2>
             <div class="bg-gray-100 p-6 rounded-lg shadow-lg">
-                <!-- Moved the image upload input to the top -->
                 <input type="file" id="post-image" class="border border-gray-300 rounded-lg p-2 w-full mb-4" accept="image/*">
                 <input type="text" id="post-title" class="border border-gray-300 rounded-lg p-2 w-full mb-4" placeholder="Título del post">
                 <textarea id="post-content" class="border border-gray-300 rounded-lg p-2 w-full mb-4" rows="4" placeholder="Escribe tu contenido..."></textarea>
@@ -50,7 +70,7 @@
         <div class="container mx-auto">
             <h2 class="text-3xl font-semibold mb-8 text-center">Conecta</h2>
             <div class="space-y-6">
-                <!-- Example of forum post -->
+                <!-- Examples -->
                 <div class="bg-gray-100 p-6 rounded-lg shadow-lg">
                     <p><strong>Harry Potter:</strong> ¿Cómo alimentar una tarántula <em>Brachypelma</em>?</p>
                     <div class="mt-4 flex space-x-4">
@@ -121,18 +141,21 @@
 
     <footer class="bg-gray-800 text-white py-4">
         <div class="container mx-auto text-center">
-            <p>&copy; 2024 Exopets Marketplace. Todos los derechos reservados.</p>
+            <p>&copy; 2024 Exopets. All rights reserved.</p>
+            <div class="flex justify-center space-x-4">
+                <a href="about.html" class="hover:text-yellow-400">About Us</a>
+                <a href="contact.html" class="hover:text-yellow-400">Contact</a>
+                <a href="privacy.html" class="hover:text-yellow-400">Privacy Policy</a>
+            </div>
         </div>
     </footer>
 
     <script>
         function submitPost() {
-            // Functionality to submit the post (e.g., send to server or display below)
             const title = document.getElementById("post-title").value;
             const content = document.getElementById("post-content").value;
             const image = document.getElementById("post-image").files[0];
 
-            // Display post information below (just for demo purposes)
             const newPostContainer = document.getElementById("new-posts");
             const newPostDiv = document.createElement("div");
             newPostDiv.className = "bg-gray-100 p-6 rounded-lg shadow-lg mb-4";
@@ -145,7 +168,6 @@
             }
             newPostContainer.appendChild(newPostDiv);
 
-            // Clear input fields
             document.getElementById("post-title").value = '';
             document.getElementById("post-content").value = '';
             document.getElementById("post-image").value = '';
@@ -159,14 +181,34 @@
         function sendResponse(responseTextId, postedResponseId) {
             const responseText = document.getElementById(responseTextId).value;
 
-            // Display the response below the original post
+            // poner la respuesta abajito
             const postedResponseDiv = document.getElementById(postedResponseId);
             postedResponseDiv.innerHTML = `<p>${responseText}</p>`;
             postedResponseDiv.classList.remove("hidden");
 
-            // Clear response textarea
+            // quita lo que puso 
             document.getElementById(responseTextId).value = '';
         }
+
+        
+        const notificationBtn = document.getElementById('notification-btn');
+                const notificationDropdown = document.getElementById('notification-dropdown');
+
+                notificationBtn.addEventListener('click', function() {
+                    if (notificationDropdown.style.display === 'none') {
+                        notificationDropdown.style.display = 'block';
+                    } else {
+                        notificationDropdown.style.display = 'none';
+                    }
+                });
+
+                // cierra las notis si se da clkik fuera 
+                window.addEventListener('click', function(event) {
+                    if (!notificationBtn.contains(event.target) && !notificationDropdown.contains(event.target)) {
+                        notificationDropdown.style.display = 'none';
+                    }
+                });
+
     </script>
 
 </body>
