--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
             <div class="container mx-auto">
                 <h2 class="text-3xl font-semibold mb-8 text-center">Conecta</h2>
                 <div class="space-y-6">
+
                     <div id="reply-modal" class="fixed inset-0 flex items-center justify-center z-50 bg-black bg-opacity-50 hidden">
                         <div class="bg-white p-6 rounded-lg shadow-lg w-1/2">
                             <h3 class="text-2xl font-semibold mb-4">Escribir respuesta</h3>
@@ -99,7 +100,7 @@
                         <button class="mt-4 bg-yellow-400 hover:bg-yellow-500 text-white py-2 px-4 rounded reply-btn" data-username="Mal Uma">Responder</button>
                     </div>
                 </div>
-                <!-- Full Forum Link -->
+                <!-- Forum Link -->
                 <div class="text-center mt-6">
                     <a href="foro.html" class="bg-yellow-400 text-gray-800 py-2 px-4 rounded hover:bg-yellow-500 reply-btn">Ver todos los comentarios en el foro</a>
                 </div>
@@ -111,7 +112,7 @@
                     const cancelReplyBtn = document.getElementById('cancel-reply');
                     let currentUser = '';
                 
-                    // Mostrar modal cuando se hace clic en "Responder"
+                    // Mostrar cosa cuando se hace clic en "Responder"
                     document.querySelectorAll('.reply-btn').forEach(button => {
                         button.addEventListener('click', function() {
                             currentUser = this.getAttribute('data-username');
@@ -131,7 +132,7 @@
                         }
                     });
                 
-                    // Cancelar y cerrar el modal
+                    // Cancelar y cerrar la cosa esa
                     cancelReplyBtn.addEventListener('click', function() {
                         replyModal.classList.add('hidden');
                     });
@@ -148,7 +149,7 @@
                     }
                 });
 
-                // Cerrar el dropdown si se hace clic fuera de él
+                // para cerrar cuando se ace clik en otro luar 
                 window.addEventListener('click', function(event) {
                     if (!notificationBtn.contains(event.target) && !notificationDropdown.contains(event.target)) {
                         notificationDropdown.style.display = 'none';
