--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <title>Exopets Marketplace</title>
+    <title>Exopets🦎</title>
 </head>
 <body class="bg-gray-50">
 
@@ -138,15 +138,16 @@
                     });
                 });
 
-                            const notificationBtn = document.getElementById('notification-btn');
+                const notificationBtn = document.getElementById('notification-btn');
                 const notificationDropdown = document.getElementById('notification-dropdown');
 
                 notificationBtn.addEventListener('click', function() {
-                    if (notificationDropdown.style.display === 'none') {
-                        notificationDropdown.style.display = 'block';
-                    } else {
-                        notificationDropdown.style.display = 'none';
-                    }
+                console.log('Notificación botón clicado');
+                if (notificationDropdown.style.display === 'none' || notificationDropdown.style.display === '') {
+                    notificationDropdown.style.display = 'block';
+                } else {
+                notificationDropdown.style.display = 'none';
+                }
                 });
 
                 // para cerrar cuando se ace clik en otro luar 
